[gd_scene load_steps=5 format=3 uid="uid://ca66knr0l7xhi"]

[ext_resource type="Script" uid="uid://dthw00pg3gb53" path="res://src/menus/start/start_menu_content.gd" id="1_1100q"]
[ext_resource type="Theme" uid="uid://cc4kinw8uu246" path="res://assets/themes/font_game_title.tres" id="1_giw0s"]
[ext_resource type="Theme" uid="uid://dlao31omhu6nr" path="res://assets/themes/font_header.tres" id="2_1100q"]
[ext_resource type="Theme" uid="uid://dij3inof1d6xx" path="res://assets/themes/button_big.tres" id="3_wawef"]

[node name="StartMenuContent" type="VBoxContainer"]
alignment = 1
script = ExtResource("1_1100q")

[node name="Title" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_giw0s")
text = "30 Days
in the Fog"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_1100q")
text = "Ludum Dare 58 Game Jam Entry"
horizontal_alignment = 1

[node name="MarginContainerButtonPlay" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("3_wawef")

[node name="ButtonPlay" type="Button" parent="MarginContainerButtonPlay"]
layout_mode = 2
theme = ExtResource("3_wawef")
text = "Play"

[node name="Navigation" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation"]
layout_mode = 2

[node name="MenuBarChooseCharacter" type="MenuBar" parent="Navigation/VBoxContainer"]
visible = false
layout_mode = 2

[node name="PopupMenu" type="PopupMenu" parent="Navigation/VBoxContainer/MenuBarChooseCharacter"]
oversampling_override = 1.0
title = "Choose a Character"
item_count = 3
item_0/text = "Alchemist"
item_0/id = 0
item_1/text = "Hero"
item_1/id = 1
item_2/text = "Smith"
item_2/id = 2

[node name="ButtonSettings" type="Button" parent="Navigation/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonCredits" type="Button" parent="Navigation/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ButtonQuit" type="Button" parent="Navigation/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="mouse_entered" from="MarginContainerButtonPlay/ButtonPlay" to="." method="_on_button_play_mouse_entered"]
[connection signal="pressed" from="MarginContainerButtonPlay/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="mouse_entered" from="Navigation/VBoxContainer/MenuBarChooseCharacter" to="." method="_on_menu_bar_choose_character_mouse_entered"]
[connection signal="mouse_entered" from="Navigation/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_mouse_entered"]
[connection signal="pressed" from="Navigation/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="mouse_entered" from="Navigation/VBoxContainer/ButtonCredits" to="." method="_on_button_credits_mouse_entered"]
[connection signal="pressed" from="Navigation/VBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="mouse_entered" from="Navigation/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_mouse_entered"]
[connection signal="pressed" from="Navigation/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
